<resources>
    <string name="app_name">Hero App</string>
    <string name="team_cards">Football teams (ViewPager)</string>
    <string name="welcome">Welcome to the Hero App</string>
    <string name="edit_username">Edit Username</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="drawer_info">This is a Navigation Drawer</string>
    <string name="username">guest</string>
    <string name="newstring">First</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">sfsjfonfonfownfl wnfelwnefd</string>
    <string name="dialog_message">Enter username</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="slavia_praha">FK Slavia Praha</string>
    <string name="sparta_praha">AC Sparta Praha</string>
    <string name="viktoria_plzen">FC Viktoria Plzen</string>
    <string name="banik_ostrava">FC Baník Ostrava</string>
    <string name="mlada_boleslav">FK Mladá Boleslav</string>
    <string name="jablonec">FK Jablonec</string>
    <string name="slovacko">1. FC Slovácko</string>
    <string name="no_text">No text passed to TextView</string>
    <string name="some_text">some text</string>
    <string name="dialog_1">Hello</string>
    <string name="dialog_2">Merge</string>
    <string name="dialog_3">Activity merge</string>
    <string name="dialogs">Dialogs</string>
    <string name="reset">Reset</string>
    <string name="insert_text_to_merge">Insert text to merge</string>
    <string name="profile_picture">Profile picture</string>
    <string name="animation">Animation</string>
    <string name="list_description">Description</string>
    <string name="list_title">Title</string>
    <string name="list_button">Delete</string>
    <string name="recycler_view">Recycler View</string>
    <string name="submit">Submit</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="id">id</string>
    <string name="status">status</string>
    <string name="landings">landings</string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <string name="successful">successful</string>
    <string name="percent">%</string>
    <string name="hundred">100</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="space_x_landpads">Space X Landpads</string>
    <string name="back">Back</string>
    <string name="openzavorka">(</string>
    <string name="closezavorka">)</string>
    <string name="region">region</string>
    <string name="space_x_launches">Space X Launches</string>
    <string name="year">year</string>
    <string name="rocket">rocket</string>
    <string name="site">site</string>
    <string name="launch">launch</string>
    <string name="only_successful">only successful</string>
    <string name="launch_year">launch year</string>
    <string name="_2020">2020</string>
    <string name="successful_failed">successful / failed</string>

</resources>
