<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="15dp">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/profile_photo"
        android:contentDescription="@string/profile_picture"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/drawer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/ToolbarStyle"
        android:textSize="20sp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/drawer_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_info"
        style="@style/ToolbarStyle" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        style="@style/ToolbarStyle"
        android:textSize="12sp"
        android:fontFamily="serif-monospace"
        android:layout_marginBottom="20dp" />


</LinearLayout>