<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_dia_con_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_vertical">

    <EditText
        android:id="@+id/fragment_dialog_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/some_text"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/fragment_dialog_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="16dp"
        android:text="@string/no_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/button_dialog_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_1"
        style="@style/ClearButton"
        app:layout_constraintBottom_toBottomOf="@id/button_dialog_3"
        app:layout_constraintEnd_toStartOf="@+id/button_dialog_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dialog_text" />

    <Button
        android:id="@+id/button_dialog_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_2"
        style="@style/ClearButton"
        app:layout_constraintBottom_toBottomOf="@+id/button_dialog_3"
        app:layout_constraintEnd_toStartOf="@+id/button_dialog_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dialog_1"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dialog_text" />

    <Button
        android:id="@+id/button_dialog_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_3"
        style="@style/ClearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dialog_2"
        app:layout_constraintTop_toBottomOf="@id/fragment_dialog_text" />


    <Button
        android:id="@+id/button_dialog_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/reset"
        style="@style/ClearButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dialog_3" />
</androidx.constraintlayout.widget.ConstraintLayout>